--- a/styles/debug.css
+++ b/styles/debug.css
@@ -1,5 +1,5 @@
 .wireframe {
-  border-style: dashed;
-  border-color: #00000055;
+  border-style: none;
+  border-color: #FFFFFF55;
   border-width: 1px;
 }
