--- a/styles/global.css
+++ b/styles/global.css
@@ -2,22 +2,48 @@
   box-sizing: border-box;
 }
 
-@font-face {
-    font-family: "Roboto-Regular";
-    font-weight: normal;
-    src: url(../resources/fonts/roboto/static/Roboto-Regular.ttf) format("TrueType");
+:root {
+  --font-regular: "Courier-Prime";
+  --font-bold: "Courier-Prime-Bold";
+  --web-black: #231f20;
+--web-black-semi: #231f20AA;
+  --red-primary: #d11f2f;
+  --red-secondary: #9f1b30;
+  --white: #ffffff;
 }
 
 @font-face {
-    font-family: "Roboto-Bold";
-    font-weight: bold;
-    src: url(../resources/fonts/roboto/static/Roboto-Bold.ttf) format("TrueType");
+  font-family: "Roboto-Regular";
+  font-weight: normal;
+  src: url(../resources/fonts/roboto/static/Roboto-Regular.ttf)
+    format("TrueType");
 }
 
 @font-face {
-    font-family: "Roboto-Bolder";
-    font-weight: bolder;
-    src: url(../resources/fonts/roboto/static/Roboto-ExtraBold.ttf) format("TrueType");
+  font-family: "Roboto-Bold";
+  font-weight: bold;
+  src: url(../resources/fonts/roboto/static/Roboto-Bold.ttf) format("TrueType");
+}
+
+@font-face {
+  font-family: "Roboto-Bolder";
+  font-weight: bolder;
+  src: url(../resources/fonts/roboto/static/Roboto-ExtraBold.ttf)
+    format("TrueType");
+}
+
+@font-face {
+  font-family: "Courier-Prime";
+  font-weight: normal;
+  src: url(../resources/fonts/courier_prime/CourierPrime-Regular.ttf)
+    format("TrueType");
+}
+
+@font-face {
+  font-family: "Courier-Prime-Bold";
+  font-weight: bold;
+  src: url(../resources/fonts/courier_prime/CourierPrime-Bold.ttf)
+    format("TrueType");
 }
 
 html,
@@ -60,4 +86,12 @@ body {
 
 .no-padding {
   padding: 0;
+}
+
+.red {
+  color: var(--red-primary);
+}
+
+.white {
+  color: var(--white);
 }
