--- a/styles/gradient-bg.css
+++ b/styles/gradient-bg.css
@@ -1,11 +1,17 @@
 #gradient-bg {
   height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: -9999;
+  object-fit: scale-down;
+  overflow: hidden;
 }
 
 #gradient-bg {
   animation: gradient 15s ease infinite;
-  background: linear-gradient(-45deg, #ee5252, #000000, #472121, #000000);
-  background-size: 200% 200%;
+  background: linear-gradient(-45deg, var(--red-primary), var(--web-black), var(--red-secondary), var(--web-black))
+    repeat-y;
+  background-size: 500% 500%;
   height: 100%;
 }
 
@@ -19,4 +25,20 @@
   100% {
     background-position: 0% 50%;
   }
+}
+
+.video-background {
+  position: absolute;
+  height: auto;
+  width: 100%;
+  z-index: -9998;
+  mix-blend-mode: color-dodge;
+}
+
+.post-process{
+    filter: blur(5px);
+}
+
+.blur-backround{
+ backdrop-filter: blur(8px);
 }
