modified:   index.html new file:   resources/backgrounds/IMG_3751.jpg new file:   resources/bg_fire.mp4 new file:   resources/parallax-bg/bg-1.png new file:   resources/parallax-bg/bg-2.png new file:   resources/parallax-bg/bg-3.png new file:   resources/parallax-bg/bg-4.png new file:   resources/profiles/1758454714943.png new file:   script/video-background.js modified:   styles/about-us.css modified:   styles/article-container.css modified:   styles/debug.css modified:   styles/gradient-bg.css modified:   styles/home-bar.css new file:   styles/profiles-view.css new file:   styles/protesters-bg.css modified:   styles/root-container.css

--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -4,6 +4,8 @@
   align-items: center;
   padding-left: 32px;
   padding-right: 32px;
+  height: 100vh;
+  width: auto;
 }
 
 #content-bar #about-us-container #about-title-text {
