--- a/styles/home-bar.css
+++ b/styles/home-bar.css
@@ -10,6 +10,7 @@
   border-style: solid;
   border-image: linear-gradient(90deg, transparent, white, white, transparent) 1;
   align-items: center;
+  z-index: 10;
 }
 
 #home-bar #navigation-bar {
