--- a/styles/profiles-view.css
+++ b/styles/profiles-view.css
@@ -1,58 +1,56 @@
-#articles-container {
-  display: flex;
-  flex-direction: column;
+#profiles-container-view {
+  width: 100%;
+  height: 100vh;
   background-color: var(--web-black);
   padding-top: 12px;
   padding-bottom: 12px;
+  overflow-x: scroll;
 }
 
-#articles-view-container {
+#profile-container {
   display: flex;
   flex-direction: row;
-  overflow-x: scroll;
-  overflow-y: scroll;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 8px;
   justify-content: space-evenly;
+    width: 100%;
+  height: 100vh;
 }
 
-#popular-articles-title {
+#profiles-container-title {
   color: white;
   font-family: var(--font-bold);
   font-size: xx-large;
-  align-self: center;
+  text-align: center;
   border-top: 0;
   border-bottom: 2px;
   border-style: solid;
   border-image: linear-gradient(90deg, transparent, white, white, transparent) 1;
 }
 
-.article-card {
+.profile-card {
   display: grid;
-  grid-template-rows: 3fr 1fr 1fr ;
+  grid-template-rows: 3fr 1fr;
   height: 75vh;
   width: auto;
   background-color: var(--web-black);
   border-radius: 8px;
   filter: brightness(125%);
-  aspect-ratio: 3/4;
+  height: 75vh;
+  border-radius: 8px;
+    object-fit: scale-down;
 }
 
-.article-card .article-bg-image {
+.profile-bg-image {
   background-color: var(--red-secondary);
-  height: inherit;
+  height: 65vh;
   width: auto;
   border-radius: 8px;
-  object-fit: cover;
+  object-fit: scale-down;
 }
 
-.article-title {
+.profile-title {
   font-family: var(--font-regular);
   color: white;
   padding: 8px;
-}
-
-.article-description {
-  font-family: var(--font-regular);
-  color: white;
 }
