--- a/styles/root-container.css
+++ b/styles/root-container.css
@@ -1,12 +1,13 @@
 #root-container{
     display: grid;
-    grid-template-rows: 1fr 11fr;
+    grid-template-rows: 1fr 1fr 1fr;
     height: 100%;
     overflow: scroll;
+    position: relative;
 }
 
 #content-bar {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr;
   align-content: center;
 }
