new file:   .nojekyll modified:   README.md new file:   articles/astrae-article/RLW Poems.pdf new file:   articles/ellawie-article/IMG_3261.PNG new file:   articles/ellawie-article/IMG_3268.PNG new file:   articles/ellawie-article/IMG_3269.PNG new file:   articles/ellawie-article/IMG_3270.PNG new file:   articles/ellawie-article/wmremove-transformed.jpeg new file:   articles/maligno-article/Screenshot_20251003_182854.png new file:   articles/maligno-article/corruption-thumbnail.png new file:   articles/maligno-article/corruption.png new file:   articles/maligno-article/crumple-texture.jpg new file:   articles/maligno-article/generic-paper-texture.jpg new file:   articles/maligno-article/image_186863270.png new file:   articles/maligno-article/justice-and-coprruption.pdf new file:   articles/maligno-article/maligno-article.html new file:   articles/maligno-article/maligno-style.css new file:   articles/maligno-article/newspaper-dropper.js new file:   articles/maligno-article/paper-texture-bw.png new file:   articles/sah-article/IMG_0992.jpg new file:   articles/sah-article/IMG_1001.jpg new file:   articles/sah-article/IMG_1016.jpg new file:   articles/sah-article/IMG_1112.PNG new file:   articles/sah-article/IMG_1113.PNG new file:   articles/sah-article/IMG_1114.PNG new file:   articles/sah-article/IMG_1115.PNG new file:   articles/sah-article/sah-article.html new file:   articles/sah-article/sah-style.css new file:   articles/saplit-article/IMG_20250929_230104.png new file:   articles/saplit-article/IMG_20250930_202939.png new file:   articles/saplit-article/IMG_20250930_203136.png new file:   articles/saplit-article/IMG_20250930_203532.png new file:   articles/saplit-article/Messenger_creation_345D7CDF-EF1F-4D68-A6F7-BC872FB6ECB4.jpeg new file:   articles/slyfer-article/ANZA, JOHN KYLE P._POEM.pdf.pdf modified:   index.html modified:   styles/articles.css modified:   styles/background-container.css modified:   styles/debug.css modified:   styles/globals.css modifie

--- a/styles/articles.css
+++ b/styles/articles.css
@@ -15,22 +15,12 @@
   box-shadow: 4px 4px #00000066;
   cursor: pointer;
   animation: hover-out 0.5s cubic-bezier(0, 1.01, 1, 1) 1 forwards;
-  border-top: 4px;
-  border-bottom: 4px;
-  border-right: 4px;
-  border-left: 4px;
-  border-style: solid;
-  border-image: linear-gradient(
-    to up-down,
-    transparent,
-    var(--white),
-  );
 }
 
 .article-image {
   height: 100%;
   width: 100%;
-  object-fit: contain;
+  object-fit: fill;
   border-radius: 16px 16px 0 0;
   background-color: var(--red-secondary);
 }
