--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,8 +78,30 @@ body {
   backdrop-filter: blur(8px);
 }
 
-.load-effect{
+.load-effect-1 {
   visibility: hidden;
   opacity: 0%;
 }
 
+.load-effect-2 {
+  visibility: hidden;
+  opacity: 0%;
+}
+
+.load-effect-3 {
+  visibility: hidden;
+  opacity: 0%;
+}
+
+.maligno-load-effect-1 {
+  opacity: 0%;
+}
+.maligno-load-effect-2 {
+  opacity: 0%;
+}
+.maligno-load-effect-3 {
+  opacity: 0%;
+}
+.maligno-load-effect-4 {
+  opacity: 0%;
+}
