--- a/styles/main-content-container.css
+++ b/styles/main-content-container.css
@@ -81,6 +81,7 @@
   grid-template-columns: repeat(auto-fill, 50vh);
   gap: 16px;
   padding: 16px;
+  justify-content: space-around;
 }
 
 #main-content-container #journalist-stack-container #journalist-container {
