--- a/styles/menu-bar-container.css
+++ b/styles/menu-bar-container.css
@@ -25,7 +25,7 @@
 
 .navigation-button{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     border-radius: 4px;
     margin: 8px;
     padding: 0;
