--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,16 @@ body {
 .maligno-load-effect-4 {
   opacity: 0%;
 }
+
+.sah-load-effect-1 {
+  opacity: 0%;
+}
+.sah-load-effect-2 {
+  opacity: 0%;
+}
+.sah-load-effect-3 {
+  opacity: 0%;
+}
+.sah-load-effect-4 {
+  opacity: 0%;
+}
