--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
 html,
 body {
   height: 100%;
+  width: auto;
   background-color: var(--web-black);
 }
 
@@ -35,29 +36,12 @@ body {
     format("TrueType");
 }
 
-.text-regular {
+.text-normal{
   font-family: var(--font-regular);
-  font-size: normal;
-}
-.text-x-large {
-  font-family: var(--font-regular);
-  font-size: x-large;
-}
-.text-xx-large {
-  font-family: var(--font-regular);
-  font-size: xx-large;
 }
 
 .text-bolded {
   font-family: var(--font-bold);
-}
-
-.text-white {
-  color: var(--white);
-}
-
-.text-red {
-  color: var(--red-primary);
 }
 
 .title-effect {
@@ -76,21 +60,6 @@ body {
 
 .blur-backround {
   backdrop-filter: blur(8px);
-}
-
-.load-effect-1 {
-  visibility: hidden;
-  opacity: 0%;
-}
-
-.load-effect-2 {
-  visibility: hidden;
-  opacity: 0%;
-}
-
-.load-effect-3 {
-  visibility: hidden;
-  opacity: 0%;
 }
 
 .maligno-load-effect-1 {
