--- a/styles/home/home-background-container.css
+++ b/styles/home/home-background-container.css
@@ -1,6 +1,6 @@
 #background-container {
   position: fixed;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   left: 0;
   right: 0;
@@ -8,6 +8,7 @@
   bottom: 0;
   filter: brightness(75%);
   pointer-events: none;
+  overflow: hidden;
 }
 
 #gradient-background {
@@ -53,7 +54,7 @@
     object-fit: cover;
     position: absolute;
     height: 100%;
-    width: 100%;
+    width: 100vw;
     scale: 110%;
     image-rendering: optimizeSpeed;
 }
