--- a/styles/menu-bar-container.css
+++ b/styles/menu-bar-container.css
@@ -1,8 +1,48 @@
+@media only screen and (max-width: 600px) {
+  .navigation-button-text {
+    display: none;
+  }
+
+  .navigation-button-image {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
+
+  #menu-bar-container #menu-bar {
+    height: 100%;
+    background-color: var(--web-black-semi);
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    pointer-events: auto;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .navigation-button-text {
+    display: visible;
+  }
+
+  .navigation-button-image {
+    height: 50%;
+    width: 50%;
+    object-fit: contain;
+  }
+
+  #menu-bar-container #menu-bar {
+    height: 100%;
+    background-color: var(--web-black-semi);
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    pointer-events: auto;
+  }
+}
+
 #menu-bar-container {
   display: grid;
   grid-template-rows: 1fr 11fr;
   position: fixed;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   left: 0;
   right: 0;
@@ -11,42 +51,22 @@
   pointer-events: none;
 }
 
-#menu-bar-container #menu-bar {
-  height: 100%;
-  background-color: var(--web-black-semi);
-  display: grid;
-  grid-template-columns: 4fr 1fr;
-  pointer-events: auto;
-}
-#menu-bar-container #menu-bar #menubar-navigation-container{
-    display: flex;
-    flex-direction: row;
-    
+#menu-bar-container #menu-bar #menubar-navigation-container {
+  display: flex;
+  flex-direction: row;
 }
 
-.navigation-button{
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    border-radius: 4px;
-    margin: 8px;
-    padding: 0;
-    align-items: center;
-    background-color: var(--web-black);
-    border-style: solid;
-      border-image: linear-gradient(
-      0deg,
-      var(--white),
-      var(--white),
-      transparent
-    )
-    1;
-}
-
-.navigation-button-image{
-  height: 50%;
-  width: 50%;
-  object-fit: contain;
+.navigation-button {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  border-radius: 4px;
+  margin: 8px;
+  padding: 0;
+  align-items: center;
+  background-color: var(--web-black);
+  border-style: solid;
+  border-image: linear-gradient(0deg, var(--white), var(--white), transparent) 1;
 }
 
 #menu-bar-container #menu-bar #menu-bar-title {
@@ -57,4 +77,25 @@
 
 #menu-bar-container #view-space {
   height: 100%;
+}
+
+.text-regular {
+  font-family: var(--font-regular);
+  font-size: clamp(1rem, 1vmax, 3rem);
+}
+.text-x-large {
+  font-family: var(--font-regular);
+  font-size: clamp(1rem, 1.5vmax, 4rem);
+}
+.text-xx-large {
+  font-family: var(--font-regular);
+  font-size: clamp(1rem, 2.5vmax, 5rem);
+}
+
+.text-white {
+  color: var(--white);
+}
+
+.text-red {
+  color: var(--red-primary);
 }
