deleted:    articles/maligno-article/crumple-texture.jpg modified:   articles/maligno-article/maligno-article.html modified:   articles/sah-article/sah-article.html new file:   articles/saplit-article/photo-card-dropper.js new file:   articles/saplit-article/saplit-article.html new file:   articles/saplit-article/saplit-style.css deleted:    articles/uno-article/IMG_3743.PNG deleted:    articles/uno-article/IMG_3745.PNG deleted:    articles/uno-article/IMG_3751.JPG deleted:    articles/uno-article/IMG_3752.JPG deleted:    articles/uno-article/IMG_3770.PNG deleted:    articles/uno-article/IMG_3771.PNG deleted:    articles/uno-article/IMG_3773.PNG deleted:    articles/uno-article/dust-bg.webm deleted:    articles/uno-article/light-bg-tp.png deleted:    articles/uno-article/light-bg.png deleted:    articles/uno-article/polaroid-1.png modified:   articles/uno-article/uno-article.html modified:   articles/uno-article/uno-style.css renamed:    articles/sah-article/dust-bg.webm -> resources/dust-bg.webm renamed:    articles/sah-article/light-bg-tp.png -> resources/general/light-bg-tp.png renamed:    articles/sah-article/light-bg.png -> resources/general/light-bg.png renamed:    articles/sah-article/IMG_0992-rs.jpg -> resources/general/sah/IMG_0992-rs.jpg renamed:    articles/sah-article/IMG_1001-rs.jpg -> resources/general/sah/IMG_1001-rs.jpg renamed:    articles/sah-article/IMG_1016-rs.jpg -> resources/general/sah/IMG_1016-rs.jpg renamed:    articles/saplit-article/IMG_20250929_230104.png -> resources/general/saplit/IMG_20250929_230104.png renamed:    articles/saplit-article/Messenger_creation_345D7CDF-EF1F-4D68-A6F7-BC872FB6ECB4.jpeg -> resources/general/saplit/Messenger_creation_345D7CDF-EF1F-4D68-A6F7-BC872FB6ECB4.jpeg new file:   resources/general/uno/IMG_3751-rs.JPG new file:   resources/general/uno/IMG_3752-rs.JPG renamed:    articles/sah-article/photo_journal-1-rs.png -> resources/polaroids/sah/photo_journal-1-rs.png renamed:    articles/sah-article/photo_journal-2

--- a/articles/saplit-article/saplit-style.css
+++ b/articles/saplit-article/saplit-style.css
@@ -1,4 +1,4 @@
-#uno-main-content-container {
+#saplit-main-content-container {
   position: relative;
   width: 100%;
   height: 100%;
@@ -23,14 +23,14 @@
   background-color: #000000aa;
 }
 
-#uno-main-title {
+#saplit-main-title {
   height: auto;
   width: 100%;
   align-self: flex-end;
   text-align: center;
 }
 
-#uno-second-title {
+#saplit-second-title {
   height: auto;
   width: 100%;
   align-self: flex-start;
@@ -44,23 +44,23 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.uno-text-r {
+.saplit-text-r {
   color: var(--white);
   font-family: var(--font-regular);
   font-size: 175%;
 }
-.uno-text-x {
+.saplit-text-x {
   color: var(--white);
   font-family: var(--font-regular);
   font-size: 250%;
 }
-.uno-text-xx {
+.saplit-text-xx {
   color: var(--white);
   font-family: var(--font-regular);
   font-size: 400%;
 }
 
-.uno-text-xxx {
+.saplit-text-xxx {
   color: var(--white);
   font-family: var(--font-regular);
   font-size: 500%;
@@ -84,7 +84,7 @@
   padding: 32px;
 }
 
-#uno-background-container {
+#saplit-background-container {
   position: fixed;
   height: 100%;
   width: 100%;
