--- a/styles/home/home-background-container.css
+++ b/styles/home/home-background-container.css
@@ -14,7 +14,7 @@
 #gradient-background {
   position: absolute;
   z-index: -9999;
-  animation: gradient 15s ease infinite;
+  animation: gradient 30s ease infinite;
   background: linear-gradient(
       -45deg,
       var(--red-primary),
@@ -41,9 +41,9 @@
 }
 
 #video-background-player {
-  position: absolute;
-  height: 100%;
-  width: 100%;
+  position: fixed;
+  height: auto;
+  width: 100vw;
   z-index: -9998;
   mix-blend-mode: color-dodge;
   opacity: 25%;
